2012-05-29  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added check to avoid overwriting imported records' pid, references #31787

2012-05-25  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Used SwiftMailer for reporting mail, resolves #13711

2012-05-21  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Replaced excludedOperations by disabledOperations for naming consistency, resolves #29301

2012-05-20  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Removed the doNotLoadInFE flag, resolves #37325
	* Moved the whole BE module logic to Extbase and ExtJS, resolves #13836
	* Adapted the BE module to match the TYPO3 skin, resolves #13835
	* Removed all legacy code, resolves #5106

2011-05-20  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Used PHP time limit also for AJAX timeout, resolves #25893

2011-05-14  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Corrected time zone handling in sample parse date method, resolves #26292
	* Properly localized all strings in extension configuration, resolves #13647

2011-05-06  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Corrected bug with wrongly preserved MM-relations when no mapping is available, resolves #26661

2011-04-05  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Removed French translations, resolves #25712

2011-03-15  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added support for self-referential mappings, resolves #13852
	* Corrected bug with disabling of TCEmain logging, resolves #13855

 2011-03-14  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Dropped Gabriel support, resolves #13834

2011-03-08  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released version 1.2.0

2011-03-05  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added possibility to disable TCEmain logging, resolves #10663

2011-02-17  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Changed value of flushOutput configuration option to off

2011-02-16  Francois Suter (Cobweb)  <typo3@cobweb.ch>
